--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "KYA",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
     "string_decoder": "^1.3.0"
